--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,13 @@
     </parent>
 
     <modules>
-        <module>smart-watch-app</module>
+        <module>config-server</module>
+        <module>eureka-server</module>
+        <module>backend</module>
+        <module>app</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
         <docker.image.prefix>ing</docker.image.prefix>
     </properties>
 
