Phase 2 - Build additional infrastructure for microservices

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       server:
         git:
           uri: https://github.com/sanchkart/smart-watch-backend-config.git
+          default-label: main
 server:
   port: 8071
 
