--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,64 @@
 version: '1.0'
 services:
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    depends_on:
+      - elasticsearch
+    environment:
+      - STORAGE_TYPE=elasticsearch
+      - "ES_HOSTS=elasticsearch:9300"
+    ports:
+      - "9411:9411"
+    networks:
+      backend:
+        aliases:
+          - "zipkin"
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.7.0
+    container_name: elasticsearch
+    environment:
+      - node.name=elasticsearch
+      - discovery.type=single-node
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - esdata1:/usr/share/elasticsearch/data
+    ports:
+      - 9300:9300
+      - 9200:9200
+    networks:
+      backend:
+        aliases:
+          - "elasticsearch"
+  kibana:
+    image: docker.elastic.co/kibana/kibana:7.7.0
+    container_name: kibana
+    environment:
+      ELASTICSEARCH_URL: "http://elasticsearch:9300"
+    ports:
+      - 5601:5601
+    networks:
+      backend:
+        aliases:
+          - "kibana"
+  logstash:
+    image: docker.elastic.co/logstash/logstash:7.7.0
+    container_name: logstash
+    command: logstash -f /etc/logstash/conf.d/logstash.conf
+    volumes:
+      - ./config:/etc/logstash/conf.d
+    ports:
+      - "5000:5000"
+    networks:
+      backend:
+        aliases:
+          - "logstash"
   zookeeper:
     image: wurstmeister/zookeeper:latest
     container_name: zookeeper
@@ -38,12 +97,10 @@ services:
           - "config-server"
   eurekaserver:
     image: ing/eureka-server:0.0.1-SNAPSHOT
-    container_name: eureka-server
+    container_name: eurekaServer
     ports:
       - "8070:8070"
     depends_on:
-      database:
-        condition: service_healthy
       configserver:
         condition: service_started
     networks:
@@ -82,3 +139,6 @@ services:
 networks:
   backend:
     driver: bridge
+volumes:
+  esdata1:
+    driver: local
