--- a/backend/src/main/resources/bootstrap.yml
+++ b/backend/src/main/resources/bootstrap.yml
@@ -1,6 +1,4 @@
 spring:
-  main:
-    allow-bean-definition-overriding: true
   application:
     name: smart-watch-backend
   profiles:
@@ -12,4 +10,4 @@ logging:
   level:
     com.netflix: WARN
     org.springframework.web: WARN
-    com.optimagrowth: DEBUG
+    com.ing: DEBUG
